# nexus-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/01-HelloWorld/: CMakeLists.txt  main.cpp
examples/02-FirstPolygon/: CMakeLists.txt  main.cpp
examples/02-FirstTriangle/: CMakeLists.txt  main.cpp
examples/02-VertexBuffer/: CMakeLists.txt  main.cpp
examples/03-GUI/: main.cpp
examples/04-3DTransform/: main.cpp
examples/05-MeshResource/: main.cpp
nexus/: CMakeLists.txt  NxsDefine.h  NxsMacros.h  nexus.h  nxsMacros.h
nexus/base/: CMakeLists.txt  CString.cpp  CString.hpp  Math.cpp  Math.hpp  ResourceManager.hpp  String.cpp  String.hpp  SystemClock.cpp  SystemClock.hpp  Utils.hpp
nexus/debug/: Debug.cpp  Debug.hpp
nexus/graphics/: CMakeLists.txt  Color.cpp  Color.hpp  GraphicsConst.cpp  GraphicsConst.h  RenderCommand.cpp  RenderCommand.hpp  RenderSystem.cpp  RenderSystem.hpp  Shader.cpp  Shader.hpp  Vertex.cpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp
nexus/graphics/opengl/: GLRenderCommand.cpp  GLRenderCommand.hpp  GLRenderSystem.cpp  GLRenderSystem.hpp  GLShader.cpp  GLShader.hpp  GLVertexBuffer.cpp  GLVertexBuffer.hpp  NxsGL.h
nexus/io/: CMakeLists.txt  Data.cpp  Data.hpp  File.cpp  File.hpp
nexus/os/: CMakeLists.txt  Path.cpp  Path.hpp
nexus/pattern/: CMakeLists.txt  Factory.hpp  Singleton.hpp  StateMachine.cpp  StateMachine.hpp
nexus/platform/: Application.cpp  Application.hpp  CMakeLists.txt
nexus/resource/: Mesh.cpp  Mesh.hpp  MeshResourceManager.cpp  MeshResourceManager.hpp  OBJMeshLoader.cpp  OBJMeshLoader.hpp  ResourceManager.hpp
nexus/scene/: Node.cpp  Node.hpp  Scene.cpp  Scene.hpp  Transform.cpp  Transform.hpp
proj.mac/05-MeshResource/: main.cpp
proj.mac/Nexus.xcodeproj/: project.pbxproj
proj.mac/Nexus.xcodeproj/project.xcworkspace/xcuserdata/nuttachai.xcuserdatad/: UserInterfaceState.xcuserstate
proj.mac/Nexus.xcodeproj/xcshareddata/xcschemes/: 01-HelloWorld.xcscheme  02-FirstPolygon.xcscheme  03-GUI.xcscheme  04-3DTransform.xcscheme  05-MeshResource.xcscheme  Nexus.xcscheme
proj.mac/Nexus.xcodeproj/xcuserdata/nuttachai.xcuserdatad/xcschemes/: xcschememanagement.plist
resources/shaders/: vertex-color-mvp.vert  vertex-color.frag  vertex-colorno-transform.vert
tools/: generate-header-list.py
